2003-06-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* configure.in: Add c4x as an architecture variant to tic4x.
	* configure: Regenerate.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2003-06-18  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_elf_suffix): Don't remove symbols other than
	".TOC." from PPC64_TOC relocs.

2003-06-17  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_apply_fix3): Allow BRTAKEN, BRNTAKEN relocs.

2003-06-16  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (ADDRESS_ADD_INSN,ADDRESS_ADDI_INSN,
	ADDRESS_LOAD_INSN,ADDRESS_STORE_INSN): New macros.
	(macro_build_ldst_constoffset,load_address,macro,s_cpsetup,
	s_cprestore,s_cpadd): Use them.

2003-06-16  Hans-Peter Nilsson  <hp@axis.com>

	* configure.in: Add specific case for cris-*-linux-gnu* with
	em=linux.
	* configure: Regenerate.
	* config/tc-cris.c (DEFAULT_CRIS_AXIS_LINUX_GNU): New macro, TRUE
	if TE_LINUX defined, else FALSE.
	(bfd_boolean demand_register_prefix): Set default from
	DEFAULT_CRIS_AXIS_LINUX_GNU.
	(symbols_have_leading_underscore): Similar.
	* config/tc-cris.h (LOCAL_LABELS_DOLLAR): Define to 1.

2003-06-13  Richard Earnshaw  <rearnsha@arm.com>

	* tc-arm.c (FPU_DEFAULT, case TE_LINUX): Default to FPU_ARCH_FPA.
	(FPU_DEFAULT, case TE_NetBSD): Default to FPU_ARCH_VFP for ELF,
	FPU_ARCH_FPA for AOUT.
	(md_begin): Don't try to guess the floating point architecture from
	the CPU if the OS ABI (Linux, NetBSD) mandates a particular form.

2003-06-13  Robert Millan  <zeratul2@wanadoo.es>

	* configure.in: Add i386-netbsd-gnu target.
	* configure: Regenerate.

2003-06-12  Tom Tromey  <tromey@redhat.com>

	* doc/as.texinfo (Comm): Added @node.  Moved before CFI
	directives node.

2003-06-12  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (append_insn): In a compound relocation, take the
	field width from the final (outermost) operator.

2003-06-11  Richard Henderson  <rth@redhat.com>
